fix content spacing

--- a/css/screen.css
+++ b/css/screen.css
@@ -13,6 +13,11 @@ body {
     font-size: 14px;
 }
 
+hr {
+    margin-top: 10px;
+    margin-bottom: 10px;
+}
+
 .col-lg-6 {
     color: red;
 }
@@ -142,7 +147,7 @@ footer {
 }
 
 #post-tags {
-    margin-top: 30px;
+    margin-top: 10px;
 }
 
 #prev-next {
@@ -191,16 +196,25 @@ pre, code, .hljs {
     background-color: #f7f9fd;
 }
 
+#content {
+    margin-top: 30px;
+    padding: 60px 25px 25px 25px;
+}
+
+#prev-next {
+    margin: 5px;
+}
+
+#prev-next {
+    padding: 5px;
+}
+
 @media (min-width: 1024px) {
     .navbar-nav>li>a {
         padding: 20px 20px;
     }
     .navbar-default .navbar-brand {
         font-size: 20px;
-    }
-    #content {
-        margin-top: 30px;
-        padding: 60px 40px;
     }
     #sidebar {
         margin-top: 0px;
@@ -215,10 +229,6 @@ pre, code, .hljs {
     .navbar-default .navbar-brand {
         font-size: 20px;
 
-    }
-    #content{
-        margin-top: 30px;
-        padding: 60px 40px;
     }
     #sidebar {
         margin-top: 0px;
